--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,4 +27,6 @@
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/google_analytics_async.html" . }}
 
+  <!-- Netlify Identity, needed for admin sign-in -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
