Removed Products section, replaced with Airtable subscription

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 
   {{- partial "about-product.html" . }}
 
-  {{- partial "products.html" . }}
+  {{- partial "subscribe.html" . }}
 
   {{- partial "subscription.html" . }}
 
