--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -4,16 +4,14 @@
 <section class="bg-orange section">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <!-- <div class="heading">
-          <h2>{{ $data.homepage.subscribe.title | markdownify }}</h2>
-        </div> -->
+      <!-- <div class="heading">
+        <h2>{{ $data.homepage.subscribe.title | markdownify }}</h2>
+      </div> -->
 
-        <div class="col-md-6 align-self-center text-center text-md-left">
-          <div class="content">
-            <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
-            <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrN0ML2BAU7drHKx?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="795" style="background: transparent; border: 1px solid #ccc;"></iframe>
-          </div>
+      <div class="col-md-6 align-self-center text-center">
+        <div class="content">
+          <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
+          <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrN0ML2BAU7drHKx?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="795" style="background: transparent; border: 1px solid #ccc;"></iframe>
         </div>
       </div>
     </div>
