--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -5,7 +5,7 @@
 <!-- hero area -->
 <section class="section">
 	<div class="container">
-		<div class="row">
+		<div class="row justify-content-center">
 			<!-- <div class="col-md-6 text-center mb-5 mb-md-0">
 				<img class="img-fluid" src="{{ .image | absURL }}" alt="">
 			</div> -->
